--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -8,14 +8,8 @@
   bottom: 0;
   left: auto;
   margin: auto;
-  opacity: 0;
+  // opacity: 0;
 
-  svg {
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-    transform: rotateZ(30deg) !important;
-  }
   .solid-logo {
     position: absolute;
     top: auto;
@@ -24,12 +18,8 @@
     left: 0;
     margin: auto;
     width: 100%;
-    opacity: 0;
+    // opacity: 0;
     transform: rotateZ(30deg);
     z-index: 1;
   }
-}
-.svg-container {
-  stroke: #ffd700;
-  stroke-width: 10;
 }
